--- a/spring-cloud-feign-client-hystrix/pom.xml
+++ b/spring-cloud-feign-client-hystrix/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>spring-cloud-feign-server</artifactId>
+	<artifactId>spring-cloud-feign-client-hystrix</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -26,8 +26,13 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
 		</dependency>
 	</dependencies>
+
 </project>
