--- a/spring-cloud-feign-api/pom.xml
+++ b/spring-cloud-feign-api/pom.xml
@@ -9,25 +9,22 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>spring-cloud-feign-server</artifactId>
+	<artifactId>spring-cloud-feign-api</artifactId>
+
+	<properties>
+		<skip.spring-boot>true</skip.spring-boot>
+	</properties>
 
 	<dependencies>
 		<dependency>
-			<groupId>xin.tianhui.cloud</groupId>
-			<artifactId>spring-cloud-feign-api</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
