--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
         <module>spring-cloud-feign-client</module>
 		<module>spring-cloud-feign-client-hystrix</module>
 		<module>spring-cloud-feign-api</module>
-	</modules>
+        <module>spring-cloud-gateway</module>
+    </modules>
     <packaging>pom</packaging>
     <name>spring-boot-example</name>
     <description>Demo project for Spring Boot</description>
