--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>spring-cloud-feign-client-hystrix</module>
 		<module>spring-cloud-feign-api</module>
         <module>spring-cloud-gateway</module>
+        <module>spring-cloud-sentinel</module>
     </modules>
     <packaging>pom</packaging>
     <name>spring-boot-example</name>
