--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>spring-cloud-gateway</module>
         <module>spring-cloud-sentinel</module>
 		<module>spring-cloud-sleuth</module>
+        <module>spring-cloud-security-oauth2</module>
 	</modules>
     <packaging>pom</packaging>
     <name>spring-boot-example</name>
@@ -67,6 +68,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>8.0.19</version>
+			</dependency>
             <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
