--- a/spring-cloud-feign/spring-cloud-feign-server/pom.xml
+++ b/spring-cloud-feign/spring-cloud-feign-server/pom.xml
@@ -3,13 +3,13 @@
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<artifactId>spring-cloud-example</artifactId>
+		<artifactId>spring-cloud-feign</artifactId>
 		<groupId>xin.tianhui.cloud</groupId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>spring-cloud-feign-client</artifactId>
+	<artifactId>spring-cloud-feign-server</artifactId>
 
 	<dependencies>
 		<dependency>
