--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,12 @@
     <artifactId>spring-cloud-example</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
-        <module>spring-cloud-nacos-config</module>
-        <module>spring-cloud-nacos-discovery</module>
-        <module>spring-cloud-feign-server</module>
-        <module>spring-cloud-feign-client</module>
-		<module>spring-cloud-feign-client-hystrix</module>
-		<module>spring-cloud-feign-api</module>
         <module>spring-cloud-gateway</module>
         <module>spring-cloud-sentinel</module>
 		<module>spring-cloud-sleuth</module>
         <module>spring-cloud-security-oauth2</module>
+		<module>spring-cloud-feign</module>
+		<module>spring-cloud-nacos</module>
 	</modules>
     <packaging>pom</packaging>
     <name>spring-boot-example</name>
